test/parsing/vass/comment-nested-slashstarslash-1.good
comment-nested-slashstarslash-1.chpl:6: syntax error: end-of-file in comment
comment-nested-slashstarslash-1.chpl:1: note: unterminated comment here
comment-nested-slashstarslash-1.chpl:3: note: nested comment here
